// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tree rendering > renders a tree with position-assigned nodes 1`] = `
<DocumentFragment>
  <svg>
      
    <g
      id="tree-tree1"
      style="transform: translate(50px, -32px);"
    >
      <g
        class="NodeCreationTriggerClickZone"
      >
        <rect
          class="NodeCreationTriggerClickZone--area"
          height="48"
          width="32"
          x="37.625"
          y="-148"
        />
        <circle
          class="NodeCreationTriggerClickZone--indicator"
          cx="53.625"
          cy="-120"
          r="8"
        />
        <line
          class="NodeCreationTriggerClickZone--indicator"
          x1="53.625"
          x2="53.625"
          y1="-120"
          y2="-100"
        />
      </g>
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="36.125"
          y="-98.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="53.625"
          y="-80"
        >
          S
        </text>
      </g>
      <line
        stroke="#000"
        x1="53.625"
        x2="18"
        y1="-80"
        y2="-80"
      />
      <line
        stroke="#000"
        x1="53.625"
        x2="89.25"
        y1="-80"
        y2="-80"
      />
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="0.5"
          y="-78.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="18"
          y="-60"
        >
          NP
        </text>
      </g>
      <line
        stroke="#000"
        x1="18"
        x2="18"
        y1="-60"
        y2="-22"
      />
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="0.5"
          y="-20.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="18"
          y="-2"
        >
          N
        </text>
      </g>
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="71.75"
          y="-78.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="89.25"
          y="-60"
        >
          VP
        </text>
      </g>
      <line
        stroke="#000"
        x1="89.25"
        x2="57"
        y1="-60"
        y2="-22"
      />
      <line
        stroke="#000"
        x1="89.25"
        x2="121.5"
        y1="-60"
        y2="-50"
      />
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="39.5"
          y="-20.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="57"
          y="-2"
        >
          V
        </text>
      </g>
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="104"
          y="-48.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="121.5"
          y="-30"
        >
          AdvP
        </text>
      </g>
      <path
        d="M121.5 -30 L72 -2  L104 -2 Z"
        fill="none"
        stroke="#000"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`tree rendering > renders a tree with position-assigned nodes where some are selected 1`] = `
<DocumentFragment>
  <svg>
    <g
      id="tree-tree1"
      style="transform: translate(50px, -32px);"
    >
      <g
        class="NodeCreationTriggerClickZone"
      >
        <rect
          class="NodeCreationTriggerClickZone--area"
          height="48"
          width="32"
          x="37.625"
          y="-148"
        />
        <circle
          class="NodeCreationTriggerClickZone--indicator"
          cx="53.625"
          cy="-120"
          r="8"
        />
        <line
          class="NodeCreationTriggerClickZone--indicator"
          x1="53.625"
          x2="53.625"
          y1="-120"
          y2="-100"
        />
      </g>
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="36.125"
          y="-98.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="53.625"
          y="-80"
        >
          S
        </text>
      </g>
      <line
        stroke="#000"
        x1="53.625"
        x2="18"
        y1="-80"
        y2="-80"
      />
      <line
        stroke="#000"
        x1="53.625"
        x2="89.25"
        y1="-80"
        y2="-80"
      />
      <g
        class="TreeView--node TreeView--node--selected"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="0.5"
          y="-78.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="18"
          y="-60"
        >
          NP
        </text>
      </g>
      <line
        stroke="#000"
        x1="18"
        x2="18"
        y1="-60"
        y2="-22"
      />
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="0.5"
          y="-20.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="18"
          y="-2"
        >
          N
        </text>
      </g>
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="71.75"
          y="-78.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="89.25"
          y="-60"
        >
          VP
        </text>
      </g>
      <line
        stroke="#000"
        x1="89.25"
        x2="57"
        y1="-60"
        y2="-22"
      />
      <line
        stroke="#000"
        x1="89.25"
        x2="121.5"
        y1="-60"
        y2="-50"
      />
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="39.5"
          y="-20.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="57"
          y="-2"
        >
          V
        </text>
      </g>
      <g
        class="TreeView--node TreeView--node--selected"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="104"
          y="-48.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="121.5"
          y="-30"
        >
          AdvP
        </text>
      </g>
      <path
        d="M121.5 -30 L72 -2  L104 -2 Z"
        fill="none"
        stroke="#000"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`tree rendering > renders dominated unlabeled nodes without text or gap 1`] = `
<DocumentFragment>
  <svg>
    <g
      id="tree-tree1"
      style="transform: translate(283px, 238px);"
    >
      <g
        class="NodeCreationTriggerClickZone"
      >
        <rect
          class="NodeCreationTriggerClickZone--area"
          height="48"
          width="32"
          x="21.375"
          y="-168"
        />
        <circle
          class="NodeCreationTriggerClickZone--indicator"
          cx="37.375"
          cy="-140"
          r="8"
        />
        <line
          class="NodeCreationTriggerClickZone--indicator"
          x1="37.375"
          x2="37.375"
          y1="-140"
          y2="-120"
        />
      </g>
      <g
        class="NodeCreationTriggerClickZone"
      >
        <rect
          class="NodeCreationTriggerClickZone--area"
          height="48"
          width="32"
          x="43.25"
          y="-128"
        />
        <circle
          class="NodeCreationTriggerClickZone--indicator"
          cx="59.25"
          cy="-100"
          r="8"
        />
        <line
          class="NodeCreationTriggerClickZone--indicator"
          x1="59.25"
          x2="59.25"
          y1="-100"
          y2="-80"
        />
      </g>
      <g
        class="NodeCreationTriggerClickZone"
      >
        <rect
          class="NodeCreationTriggerClickZone--area"
          height="48"
          width="32"
          x="32.3125"
          y="-168"
        />
        <circle
          class="NodeCreationTriggerClickZone--indicator"
          cx="48.3125"
          cy="-140"
          r="8"
        />
        <line
          class="NodeCreationTriggerClickZone--indicator"
          x1="48.3125"
          x2="37.375"
          y1="-140"
          y2="-120"
        />
        <line
          class="NodeCreationTriggerClickZone--indicator"
          x1="48.3125"
          x2="59.25"
          y1="-140"
          y2="-80"
        />
      </g>
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="19.875"
          y="-118.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="37.375"
          y="-100"
        >
          CP
        </text>
      </g>
      <line
        stroke="#000"
        x1="37.375"
        x2="15.5"
        y1="-100"
        y2="-2"
      />
      <line
        stroke="#000"
        x1="37.375"
        x2="47.5"
        y1="-100"
        y2="-22"
      />
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="41.75"
          y="-78.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="59.25"
          y="-60"
        >
          C'
        </text>
      </g>
      <line
        stroke="#000"
        x1="59.25"
        x2="47.5"
        y1="-60"
        y2="-22"
      />
      <line
        stroke="#000"
        x1="59.25"
        x2="71"
        y1="-60"
        y2="-40"
      />
      <g
        class="TreeView--node TreeView--node--empty-label"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="-2"
          y="-20.5"
        />
      </g>
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="30"
          y="-20.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="47.5"
          y="-2"
        >
          C
        </text>
      </g>
      <g
        class="TreeView--node"
      >
        <rect
          height="20"
          rx="3"
          ry="3"
          width="35"
          x="53.5"
          y="-38.5"
        />
        <text
          dominant-baseline="text-after-edge"
          fill="#000"
          text-anchor="middle"
          x="71"
          y="-20"
        >
          IP
        </text>
      </g>
      <path
        d="M71 -20 L64 -2  L78 -2 Z"
        fill="none"
        stroke="#000"
      />
    </g>
  </svg>
</DocumentFragment>
`;
